modified files to fix centering issue on safari

--- a/css/learning.css
+++ b/css/learning.css
@@ -84,6 +84,10 @@ body {
   margin: 20px 0;
   padding: 0 5%; }
 
+.reveal li p {
+  padding: 0; }
+  
+
 /* Ensure certain elements are never larger than the slide itself */
 .reveal img,
 .reveal video {
@@ -460,7 +464,7 @@ body {
 /*********************************************
  * Title Slide
  *********************************************/
-.title body {
+ .title body {
   background: #0077B5; }
 
 .title .slides {
@@ -481,7 +485,7 @@ body {
   margin-top: 0;
   font-size: 4.2rem; }
 
-/*********************************************
+  /*********************************************
  * Text On Image
  *********************************************/
 .textonimage body {
